# lvgl_demo4zero2w

./: CMakeLists.txt  README.md
cmake/: Toolchain-rpi-zero2w.cmake
config/: lv_conf.h  lv_drv_conf.h
docs/: pi-ili9341-xpt2046.md
icon_sources/material-icons/: README.md
scripts/: bootstrap-pi-trixie.sh  build-host.sh  build-pi.sh  check-pi-devices.sh  configure-host.sh  configure-pi-cross.sh  configure-pi-native.sh  fetch-third-party.sh  gen_cn_font.py  install-systemd-service.sh  run-host.sh  run-pi-calibrated.sh  run-pi.sh  sync-to-pi.sh  sync-ui-to-pi.sh  uninstall-systemd-service.sh
src/: main.c  pi_ili9341.c  pi_ili9341.h  pi_xpt2046.c  pi_xpt2046.h  ui_demo.c  ui_demo.h  ui_font_runtime.c  ui_font_runtime.h
src/fonts/: lv_font_cn_14.c  lv_font_cn_14.h
systemd/: lvgl-zero2w.service  readme.ME  readme.md
